--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/themify-icons.css" rel="stylesheet">
     <link href="assets/css/ei-icon.css" rel="stylesheet">
+    <link href="https://cdn.quilljs.com/1.2.2/quill.snow.css" rel="stylesheet">
+    <link href="https://cdn.quilljs.com/1.2.2/quill.bubble.css" rel="stylesheet">
 </head>
 <body>
     <app-root></app-root>
